--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
           </div>
 
           <div class="mt-6 text-[10px] text-white/50">
-            Контакты: +7 775 839 2666 • Фото: <span class="text-white/70">images/hero-bg.jpg</span>, <span class="text-white/70">images/evac-1.jpg ... evac-4.jpg</span>
+            Контакты: +7 775 839 2666 </span>
           </div>
         </div>
       </div>
